# dbt-projects

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: dbt-docs-ci.yml
.streamlit/: config.toml
app/: app.py  utils_databricks.py
dbt_shop_report/: .user.yml  README.md  dbt_project.yml
dbt_shop_report/analyses/: create_dim_for_scd_simulation.sql  explore_email.sql  explore_tables.sql  jinja_if.sql  jinja_increment_load.sql  jinja_loop.sql  jinja_select.sql  test_macros.sql
dbt_shop_report/macros/: generate_schema.sql
dbt_shop_report/models/gold/: agg_customer_loyalty.sql  agg_sales.sql  agg_sales_product_payment.sql
dbt_shop_report/models/silver/: fact_customer_sales_enriched.sql  fact_sales_product_enriched.sql  properties.yml  sales.sql
dbt_shop_report/models/source/: sources.yml
dbt_shop_report/seeds/: email.csv
dbt_shop_report/snapshots/: scd2.yml
dbt_shop_report/tests/: gross_amount_equal_price_x_quantity.sql  null_negative_net_amount.sql
dbt_shop_report/tests/generic/: not_null_negative.sql
